--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,7 +29,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/game.tscn", "res://scenes/ghots/red_ghost.tscn", "res://scenes/ghots/blue_ghost.tscn", "res://scenes/ghots/pink_ghost.tscn", "res://scenes/ghots/orange_ghost.tscn")
-current_scene="res://scenes/game.tscn"
+current_scene="res://scenes/ghots/orange_ghost.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
