--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://sprites/ghosts/orange/Laranja-MoveSet-1.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://sprites/ghosts/", "res://sprites/ghosts/orange/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/ghosts/red_ghost.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/ghosts/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/start.tscn", "res://scenes/game.tscn", "res://scenes/ghots/red_ghost.tscn", "res://scenes/ghots/blue_ghost.tscn", "res://scenes/ghots/pink_ghost.tscn", "res://scenes/ghots/orange_ghost.tscn")
-current_scene="res://scenes/ghots/orange_ghost.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/ghots/red_ghost.tscn", "res://scenes/ghots/blue_ghost.tscn", "res://scenes/ghots/pink_ghost.tscn", "res://scenes/ghots/orange_ghost.tscn")
+current_scene="res://scenes/ghots/red_ghost.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
@@ -43,12 +43,12 @@ position=Vector2i(1920, 23)
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/ghosts/blue_ghost.gd", "res://scripts/game.gd", "res://scripts/ghosts/orange_ghost.gd", "res://scripts/pacman.gd", "res://scripts/ghosts/pink_ghost.gd", "res://scripts/ghosts/red_ghost.gd"]
-selected_script="res://scripts/pacman.gd"
+open_scripts=["res://scripts/ghosts/blue_ghost.gd", "res://scripts/game.gd", "res://scripts/ghosts/GhostBase.gd", "res://scripts/managers/GhostStateManager.gd", "res://scripts/resources/MovementTargets.gd", "res://scripts/ghosts/orange_ghost.gd", "res://scripts/pacman.gd", "res://scripts/ghosts/pink_ghost.gd", "res://scripts/ghosts/red_ghost.gd"]
+selected_script="res://scripts/ghosts/red_ghost.gd"
 open_help=[]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.0
+zoom_factor=1.1428571
 
 [GameView]
 
