--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,1 +1,17 @@
-list=[]
+list=[{
+"base": &"CharacterBody2D",
+"class": &"GhostBase",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/ghosts/GhostBase.gd"
+}, {
+"base": &"Resource",
+"class": &"MovementTargets",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://scripts/resources/MovementTargets.gd"
+}]
