--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -6,8 +6,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
-"scroll_position": 0.0,
+"row": 39,
+"scroll_position": 30.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 56,
+"column": 51,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 53,
-"scroll_position": 27.0,
+"row": 22,
+"scroll_position": 9.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 9,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 9,
 "syntax_highlighter": "GDScript"
 }
 
@@ -59,11 +63,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 86,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 21,
-"scroll_position": 1.0,
+"row": 3,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,7 +81,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 21,
-"scroll_position": 1.0,
+"scroll_position": 2.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,7 +95,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 53,
-"scroll_position": 42.0,
+"scroll_position": 17.0,
 "selection": true,
 "selection_from_column": 5,
 "selection_from_line": 53,
@@ -105,11 +109,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 223,
-"scroll_position": 212.0,
+"row": 218,
+"scroll_position": 207.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
