--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -29,4 +29,4 @@ last_mode=1
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(0, 1, 1, 1, 0.35394394, 1, 0.8587991, 1)
+recent_presets=PackedColorArray(0, 1, 1, 1, 0.35394394, 1, 0.8587991, 1, 0.371897, 0.6081877, 0.27523124, 0.41960785, 1, 1, 1, 0.41960785)
