--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -11,7 +11,7 @@ dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://resources/movement_targets/red_movement_targets.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/", "res://resources/movement_targets/")
-dock_node_current_tab=0
+dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/ghots/red_ghost.tscn", "res://scenes/ghots/blue_ghost.tscn", "res://scenes/ghots/pink_ghost.tscn", "res://scenes/ghots/orange_ghost.tscn", "res://scenes/pacman.tscn")
-current_scene="res://scenes/ghots/blue_ghost.tscn"
+current_scene="res://scenes/game.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
