--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/ghots/red_ghost.tscn", "res://scenes/ghots/blue_ghost.tscn", "res://scenes/ghots/pink_ghost.tscn", "res://scenes/ghots/orange_ghost.tscn", "res://scenes/pacman.tscn")
-current_scene="res://scenes/game.tscn"
+current_scene="res://scenes/ghots/red_ghost.tscn"
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
