--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -2,6 +2,18 @@
 
 groups=[&"pacman"]
 
+[res://scenes/ghots/blue_ghost.tscn]
+
+groups=[&"ghosts"]
+
+[res://scenes/ghots/orange_ghost.tscn]
+
+groups=[&"ghosts"]
+
+[res://scenes/ghots/pink_ghost.tscn]
+
+groups=[&"ghosts"]
+
 [res://scenes/ghots/red_ghost.tscn]
 
-groups=[&"red_ghost"]
+groups=[&"red_ghost", &"ghosts"]
