--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 19,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 73,
-"scroll_position": 57.0,
+"scroll_position": 58.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 38,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
-"scroll_position": 0.0,
+"row": 78,
+"scroll_position": 75.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,16 +91,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 53,
-"scroll_position": 17.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 53,
-"selection_to_column": 9,
-"selection_to_line": 53,
+"row": 34,
+"scroll_position": 24.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -112,8 +108,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 234,
-"scroll_position": 215.0,
+"row": 153,
+"scroll_position": 143.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
