--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -17,3 +17,11 @@ groups=[&"ghosts"]
 [res://scenes/ghots/red_ghost.tscn]
 
 groups=[&"red_ghost", &"ghosts"]
+
+[res://scenes/power.tscn]
+
+groups=[&"pellets"]
+
+[res://scenes/pellet.tscn]
+
+groups=[&"pellets"]
