--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://resources/movement_targets/red_movement_targets.tres")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://resources/", "res://resources/movement_targets/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/power.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://resources/movement_targets/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,8 +28,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/ghots/red_ghost.tscn", "res://scenes/ghots/blue_ghost.tscn", "res://scenes/ghots/pink_ghost.tscn", "res://scenes/ghots/orange_ghost.tscn", "res://scenes/pacman.tscn")
-current_scene="res://scenes/game.tscn"
+open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/ghots/red_ghost.tscn", "res://scenes/ghots/blue_ghost.tscn", "res://scenes/ghots/pink_ghost.tscn", "res://scenes/ghots/orange_ghost.tscn", "res://scenes/pacman.tscn", "res://scenes/pellet.tscn", "res://scenes/power.tscn")
+current_scene=""
 center_split_offset=-257
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
