--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 32,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 81,
-"scroll_position": 68.98651,
-"selection": true,
-"selection_from_column": 25,
-"selection_from_line": 77,
-"selection_to_column": 17,
-"selection_to_line": 81,
+"scroll_position": 69.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -95,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 24.0,
+"row": 95,
+"scroll_position": 43.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 153,
-"scroll_position": 143.0,
+"row": 181,
+"scroll_position": 167.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
