--- a/.godot/scene_groups_cache.cfg
+++ b/.godot/scene_groups_cache.cfg
@@ -2,9 +2,17 @@
 
 groups=[&"pacman"]
 
-[res://scenes/ghots/blue_ghost.tscn]
+[res://scenes/power.tscn]
 
-groups=[&"ghosts"]
+groups=[&"pellets"]
+
+[res://scenes/pellet.tscn]
+
+groups=[&"pellets"]
+
+[res://scenes/ghots/red_ghost.tscn]
+
+groups=[&"ghosts", &"red_ghost"]
 
 [res://scenes/ghots/orange_ghost.tscn]
 
@@ -14,14 +22,6 @@ groups=[&"ghosts"]
 
 groups=[&"ghosts"]
 
-[res://scenes/ghots/red_ghost.tscn]
+[res://scenes/ghots/blue_ghost.tscn]
 
-groups=[&"red_ghost", &"ghosts"]
-
-[res://scenes/power.tscn]
-
-groups=[&"pellets"]
-
-[res://scenes/pellet.tscn]
-
-groups=[&"pellets"]
+groups=[&"ghosts"]
