--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -2,7 +2,7 @@
 
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=1
+dock_5_selected_tab_idx=0
 dock_floating={}
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
@@ -29,10 +29,10 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/ghots/red_ghost.tscn", "res://scenes/ghots/blue_ghost.tscn", "res://scenes/ghots/pink_ghost.tscn", "res://scenes/ghots/orange_ghost.tscn", "res://scenes/pacman.tscn", "res://scenes/pellet.tscn", "res://scenes/power.tscn")
-current_scene=""
-center_split_offset=-257
+current_scene="res://scenes/game.tscn"
+center_split_offset=-307
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,7 +44,7 @@ position=Vector2i(1920, 23)
 [ScriptEditor]
 
 open_scripts=["res://scripts/ghosts/blue_ghost.gd", "res://scripts/game.gd", "res://scripts/ghosts/GhostBase.gd", "res://scripts/managers/GhostStateManager.gd", "res://scripts/resources/MovementTargets.gd", "res://scripts/ghosts/orange_ghost.gd", "res://scripts/pacman.gd", "res://scripts/ghosts/pink_ghost.gd", "res://scripts/ghosts/red_ghost.gd"]
-selected_script="res://scripts/game.gd"
+selected_script="res://scripts/ghosts/GhostBase.gd"
 open_help=["Timer"]
 script_split_offset=200
 list_split_offset=0
