--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/power.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scenes/", "res://resources/movement_targets/")
+dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://resources/movement_targets/")
 dock_node_current_tab=1
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -32,7 +32,7 @@ open_scenes=PackedStringArray("res://scenes/game.tscn", "res://scenes/ghots/red_
 current_scene="res://scenes/game.tscn"
 center_split_offset=-307
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [EditorWindow]
@@ -44,11 +44,11 @@ position=Vector2i(1920, 23)
 [ScriptEditor]
 
 open_scripts=["res://scripts/ghosts/blue_ghost.gd", "res://scripts/game.gd", "res://scripts/ghosts/GhostBase.gd", "res://scripts/managers/GhostStateManager.gd", "res://scripts/resources/MovementTargets.gd", "res://scripts/ghosts/orange_ghost.gd", "res://scripts/pacman.gd", "res://scripts/ghosts/pink_ghost.gd", "res://scripts/ghosts/red_ghost.gd"]
-selected_script="res://scripts/ghosts/GhostBase.gd"
+selected_script="res://scripts/game.gd"
 open_help=["Timer"]
 script_split_offset=200
 list_split_offset=0
-zoom_factor=1.1428571
+zoom_factor=1.0714284
 
 [GameView]
 
